# corelibxd

hashmap/: meson.build
hashmap/src/: hashmap.c  hashmap.h  test.c  test.h
malloc/: meson.build
malloc/src/: malloc.c  malloc.h  test.c  test.h
print/: meson.build
print/src/: print.c  print.h  test.c  test.h
vector/: meson.build
vector/src/: main.c  test.c  test.h  vector.c  vector.h
